# persona-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_REVIEWS.md  ARCHITECTURE-layer-zero.md  ARCHITECTURE.md  BRANCH_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRAFT.md  HANDOFF.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  MEMORY-project.md  MULTI_PERSPECTIVE_REVIEW.md  PSYCHOLOGICAL_REALISM_PLAN.md  README.md  RESEARCH-persona-compiler.md  ROADMAP.md  SESSION-LOG.md  TRACKER.md  debug_test.py  demo_full_pipeline.py  memory.md  pyproject.toml  requirements.txt  test_behavioral_coherence.py  test_cross_turn_dynamics.py  test_domain_fixes.py  test_engine_sdk.py  test_improvements.py  test_intent_analyzer.py  test_ir_hardening.py  test_response_generation.py  test_rules_engine.py  test_scenarios.py  (+6 more)
benchmarks/: conversations.py
docs/: BEHAVIORAL_WIRING_AUDIT.md  EXTERNAL_VALIDATION_REVIEW.md  PIPELINE_FLOWCHARTS.md  PLAN_CONTEXT_CLASSIFIER.md  PSYCHOMETRIC_GROUNDING.md  REPO_STRUCTURE.md  TRAIT_FLOW_ANALYSIS.md  VALIDATION_SOURCES.md  ir_reference.md  layer_zero_guide.md  persona_authoring.md  sdk_guide.md  tutorial.md
eval/: baseline_snapshot_2026-03-21.json  behavioral_text_validation.py  benchmark_profiles.py  benchmark_report.json  correlation_analysis.py  dynamic_report.json  dynamic_validation.py  end_to_end_conversation.py  fair_comparison.py  fair_comparison_openai.py  persona_eval.py  report.json
examples/: builder_api.py  compare_twins.py  conversation_demo.py  custom_persona.py  ir_debugging.py  ir_inspection.py  ir_usage_example.py  multi_turn.py  persona_comparison.py  quick_chat.py  quick_start.py
layer_zero/: __init__.py  assembler.py  diversity.py  evolution.py  export.py  gap_filler.py  models.py  policy.py  sampler.py  validator.py
persona_engine/: __init__.py  __main__.py  analysis.py  benchmark.py  conversation.py  engine.py  exceptions.py  persona_builder.py  server.py
personas/: chef.yaml  entrepreneur.yaml  fitness_coach.yaml  lawyer.yaml  musician.yaml  physicist.yaml  retired_teacher.yaml  (+5 more)
(+173 files in other folders)
