[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-engine"
version = "0.2.0"
description = "Universal conversational persona system with full psychological framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Satish Patil"}
]
keywords = ["persona", "ai", "psychology", "simulation", "testing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/SatishoBananamoto/persona-engine"
Documentation = "https://persona-engine.readthedocs.io"
Repository = "https://github.com/SatishoBananamoto/persona-engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["persona_engine*"]

[tool.setuptools.package-data]
persona_engine = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
